# scaler-final

./: .gitignore  DEPLOYMENT.md  Dockerfile  HACKATHON_WRITEUP.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  VIDEO_DEMO_GUIDE.md  blog.md  inference.py  note.ipynb  openenv.yaml  pyproject.toml  requirements.txt  world_modeling_demo.py
artifacts/: ablation_no_actor_actions.json  grpo_training_dataset.json  grpo_training_metrics.json  heldout_drift_scenario.json  learned_policy.json  policy_snapshots.json  reward_progression.csv  reward_progression.json  training_curve.csv  training_curve.json  trl_sft_training_metrics.json
docs/: world_modeling_explanation.md
scripts/: deploy_hf_space.sh  run_local_checks.sh
server/: app.py
src/: environment.py  graders.py  models.py  policy_space.py
training/: colab_trl_sft_notebook.ipynb  evaluate_reward_improvement.py  generate_charts.py  grpo_training.py  trl_sft_training.py  trl_unsloth_compliance_notebook.ipynb
