[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "Real-world data cleaning and validation environment for training AI agents"
authors = [{name = "OpenEnv Community"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic==2.11.3",
    "openai==1.75.0",
    "pandas==2.2.3",
    "numpy==2.2.4",
    "python-multipart==0.0.20",
    "openenv-core==0.2.3",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["src", "server"]
