[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "Multi-app enterprise orchestration environment for training LLM agents"
authors = [{name = "OpenEnv Community"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "openai>=2.7.2",
    "pandas==2.2.3",
    "numpy==2.2.4",
    "python-multipart==0.0.20",
    "openenv-core==0.2.3",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["src", "server"]
