[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-orchestration-env"
version = "2.0.0"
description = "Multi-app enterprise orchestration RL environment with schema drift, actor conflicts, deceptive oversight, and GRPO training for LLM agents"
authors = [{name = "Team Scaler Final"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "openai>=2.7.2",
    "pandas==2.2.3",
    "numpy==2.2.4",
    "python-multipart==0.0.20",
    "openenv-core>=1.0.0,<2.0.0",
    "gradio>=5.0.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["src", "server"]
